--- a/app/globals.css
+++ b/app/globals.css
@@ -103,4 +103,17 @@
 	.animate-shine {
 		animation: shine 1.5s;
 	}
+
+	@keyframes float {
+		0%, 100% {
+			transform: translateY(0) rotate(0);
+		}
+		50% {
+			transform: translateY(-20px) rotate(5deg);
+		}
+	}
+
+	.animate-float {
+		animation: float 6s ease-in-out infinite;
+	}
 }
